<resources>
    <string name="app_name">ERestaurant</string>
    <string name="title">Commandez en ligne : </string>
    <string name="buttonStarters">Entrés </string>
    <string name="buttonDishes">Plats </string>
    <string name="buttonDessert">Desserts</string>
    <string name="backStarters"> Entrés </string>
    <string name="backDishes"> Plats </string>
    <string name="backSDesserts"> Desserts </string>
    <string name="buttonBack">Entrée | Plats | Desserts </string>
    <string name="categorie_title">titre</string>
    <string name="addButton">Plus</string>
    <string name="removeButton">Moins</string>
    <string name="commandButton">Ajouter</string>
    <string name="playButton">Lancez le scan</string>
    <string name="ble_scan_pause_title">Lancez le scan..</string>
    <string name="ble_scan_play_title">recherche..</string>
    <string name="nameOfBluetooth">Nom:</string>
    <string name="adressOfBluetooth">Adresse:</string>
    <string name="uuidOfBluetooth">UUID:</string>
    <string name="select_operation_type">Select operation type</string>


    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="ble_device_status">Status: %1$s </string>
    <string name="ble_device_status_connecting">en cours de connexion </string>
    <string name="ble_device_status_connected">connecte </string>
    <string name="ble_device_status_disconnected">deconnecte </string>
    <string name="ble_device_status_disconnecting">deconnetion </string>
    <string name="notifier">notifie</string>
    <string name="Propriete">propriete</string>
    <string name="Valeur">valeur</string>
    <string name="lecture">lecture</string>
    <string name="ecrire">ecrire</string>
    <string name="NomParent">nom</string>


</resources>