<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:contentDescription="logo_accueil"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/bangers"
        android:lineSpacingExtra="8sp"
        android:text="@string/title"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/buttonStarters"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/buttonStarters"
        android:textColor="#F44336"
        android:textStyle="bold"
        app:backgroundTint="#3422201B"
        app:iconPadding="10dp"
        app:iconTint="#A12A2A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonDishes"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/buttonDishes"
        android:textColor="#F44336"
        android:textStyle="bold"
        app:backgroundTint="#3422201B"
        app:iconPadding="10dp"
        app:iconTint="#A12A2A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStarters" />

    <Button
        android:id="@+id/buttonDessert"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/buttonDessert"
        android:textColor="#F44336"
        android:textStyle="bold"
        app:backgroundTint="#3422201B"
        app:iconPadding="10dp"
        app:iconTint="#A12A2A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDishes" />

</androidx.constraintlayout.widget.ConstraintLayout>